[package]
name = "rain"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macros = { path = "./macros" }
crossterm = "0.26"
rand = "0.8.5"
kira = "0.8.7"
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.119"
rmp-serde = "1.1.2"
lazy_static = "1.5.0"
enum_dispatch = "0.3.13"
[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]
